--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "lint": "eslint . --ext .ts"
   },
   "dependencies": {
+    "@types/express": "^5.0.3",
     "axios": "^1.11.0",
     "config": "^3.3.7",
     "dotenv": "^17.2.1",
+    "express": "^5.1.0",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
