--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "module": "commonjs",
   "description": "darts-caller events consumer",
   "author": "sver",
+  "type": "module",
   "main": "dist/app.js",
   "scripts": {
     "start": "tsc && node dist/app.js",
@@ -13,6 +14,8 @@
   "dependencies": {
     "@types/express": "^5.0.3",
     "axios": "^1.11.0",
+    "boxen": "^8.0.1",
+    "chalk": "^5.5.0",
     "config": "^3.3.7",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
