--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
-    "esModuleInterop": true,
-    "target": "es6",
-    "moduleResolution": "node",
+    "target": "ES2020", // or ESNext
+    "module": "nodenext", // important: ESM output
+    "moduleResolution": "NodeNext", // helps with ESM resolution
+    "esModuleInterop": true, // allows default imports from CJS
     "sourceMap": true,
     "outDir": "dist"
   },
