--- a/darts-roomly-api/package.json
+++ b/darts-roomly-api/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js",
+    "start": "tsc && node dist/index.js",
     "lint": "eslint ."
   },
   "dependencies": {
