--- a/darts-roomly-api/package.json
+++ b/darts-roomly-api/package.json
@@ -9,14 +9,16 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@trpc/server": "^11.6.0",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "mongodb": "^6.3.0",
-    "cors": "^2.8.5"
+    "zod": "^4.1.12"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.0",
-    "@types/cors": "^2.8.17",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
     "eslint": "^9.0.0",
