--- a/darts-roomly-api/package.json
+++ b/darts-roomly-api/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@trpc/server": "^11.6.0",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^4.19.2",
     "mongodb": "^6.3.0",
     "zod": "^4.1.12"
